# pluralize-rs

./: .gitignore  Cargo.toml  README.md  test-cases.txt
rules/: irregular.txt  plural.txt  singular.txt  uncountable.txt
src/: lib.rs
