[package]
name = "pluralize-rs"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"
description = "A library to covert English nouns between their singular and plural form"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"
voca_rs = "1.12.0"
